Fix the bug: overflowing content of basic-info container on small and medium devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,10 +396,6 @@ footer a {
         padding: 10px 0;
     }
 
-    .basic-info {
-        padding: 10px;
-    }
-
     .basic-info-outer {
         padding: 10px 0;
     }
@@ -576,10 +572,6 @@ footer a {
     .intro-question h2 {
         font-size: 350%;
         padding: 10px 0;
-    }
-
-    .basic-info {
-        padding: 10px;
     }
 
     .basic-info-outer {
